[gd_scene load_steps=9 format=3 uid="uid://dt60es0xf7bac"]

[ext_resource type="Script" path="res://Scripts/EndScene.gd" id="1_ajdcj"]
[ext_resource type="AudioStream" uid="uid://ctodbjk08r6pn" path="res://Assets/Sounds/IntroMenu.mp3" id="2_fx2y3"]
[ext_resource type="Texture2D" uid="uid://dvusmu4n2qocy" path="res://Assets/Background/primeraCapa.png" id="3_u6thf"]
[ext_resource type="Script" path="res://Scripts/backgroundMovement.gd" id="4_8g0bn"]
[ext_resource type="Texture2D" uid="uid://dbelvtym0x75t" path="res://Assets/Background/segundaCapa.png" id="4_ugtw0"]
[ext_resource type="Texture2D" uid="uid://bvqvxedlpoa8" path="res://Assets/Background/terceraCapa.png" id="5_uwkfq"]
[ext_resource type="Texture2D" uid="uid://bwmhbdbaisxkd" path="res://Assets/Background/cuartaCapa.png" id="6_riwgp"]
[ext_resource type="Texture2D" uid="uid://ccakmiifx1bek" path="res://Assets/Background/quintaCapa.png" id="7_sug88"]

[node name="EndScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ajdcj")

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color(0.0784314, 0.419608, 0.156863, 0.756863)
self_modulate = Color(0.6, 0.701961, 0.00392157, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1410.0
offset_top = -825.0
offset_right = -2178.0
offset_bottom = -1121.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1794.0
offset_top = -920.0
offset_right = -1794.0
offset_bottom = -920.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 125

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer"]
modulate = Color(0.2, 0.462745, 0.317647, 1)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 6
theme_override_constants/shadow_offset_y = 6
theme_override_constants/outline_size = 15
theme_override_font_sizes/font_size = 35
text = "THE END"

[node name="Info" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer"]
modulate = Color(0.2, 0.462745, 0.317647, 1)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 6
theme_override_constants/shadow_offset_y = 6
theme_override_constants/outline_size = 8
text = "Texto ejemplo"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 24

[node name="Control" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Restart" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 30)
layout_mode = 2
text = "Restart"

[node name="Exit" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Exit"

[node name="EndSceneAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_fx2y3")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
scale = Vector2(0.25, 0.25)
transform = Transform2D(0.25, 0, 0, 0.25, 0, 0)

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2(1500, 1000)
texture = ExtResource("3_u6thf")
script = ExtResource("4_8g0bn")

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer2"]
position = Vector2(1500, 1000)
texture = ExtResource("4_ugtw0")
script = ExtResource("4_8g0bn")

[node name="ParallaxLayer3" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer3"]
position = Vector2(1500, 1000)
texture = ExtResource("5_uwkfq")
script = ExtResource("4_8g0bn")

[node name="ParallaxLayer4" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer4"]
position = Vector2(1500, 1000)
texture = ExtResource("6_riwgp")
script = ExtResource("4_8g0bn")

[node name="ParallaxLayer5" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer5"]
position = Vector2(1500, 1000)
texture = ExtResource("7_sug88")
script = ExtResource("4_8g0bn")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(-1220, -596)

[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
